--- a/grupo/index.html
+++ b/grupo/index.html
@@ -1497,6 +1497,11 @@
 
 
                   <style>
+                    .e-con, .e-con>.e-con-inner {
+                      display: block!important;
+                    }
+
+                    
                     .story-container {
                         width: 200px; /* Largura do contêiner */
                         height: 200px; /* Altura do contêiner */
