--- a/grupo/index.html
+++ b/grupo/index.html
@@ -1491,7 +1491,7 @@
                 <div class="story-container">
 
                   <video width="560" height="315" autoplay loop>
-                    <source src="https://blackdfx.github.io/only/videohome.mp4" type="video/mp4">
+                    <source src="https://scripts.converteai.net/4a8d3a7d-202d-414b-956a-2f4d58344de1/players/6531c8161f32140009f6def7/embed.html" type="video/mp4">
                     Seu navegador não suporta vídeo HTML5.
                   </video>
 
