--- a/grupo/index.html
+++ b/grupo/index.html
@@ -1490,8 +1490,8 @@
               <div class="elementor-spacer">
                 <div class="story-container">
 
-                  <video width="560" height="315" autoplay loop>
-                    <source src="https://scripts.converteai.net/4a8d3a7d-202d-414b-956a-2f4d58344de1/players/6531c8161f32140009f6def7/embed.html" type="video/mp4">
+                  <video>
+                    <div id="vid_6531c8161f32140009f6def7" style="position:relative;width:100%;padding: 178.21782178217822% 0 0;"><img id="thumb_6531c8161f32140009f6def7" src="https://images.converteai.net/4a8d3a7d-202d-414b-956a-2f4d58344de1/players/6531c8161f32140009f6def7/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_6531c8161f32140009f6def7" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_6531c8161f32140009f6def7">var s=document.createElement("script");s.src="https://scripts.converteai.net/4a8d3a7d-202d-414b-956a-2f4d58344de1/players/6531c8161f32140009f6def7/player.js",s.async=!0,document.head.appendChild(s);</script>
                     Seu navegador não suporta vídeo HTML5.
                   </video>
 
