--- a/grupo/index.html
+++ b/grupo/index.html
@@ -1537,11 +1537,10 @@
     border: 3px solid transparent;
 }
             
-                    video {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover; /* Garante que o vídeo preencha todo o contêiner */
-                    }
+                    #smartplayer#smartplayer#smartplayer .smartplayer-video-wrap .smartplayer-video-current {
+    display: block;
+    margin-top: -65px;
+}
 
                     .elementor-spacer {
                       display: flex;
