--- a/grupo/index.html
+++ b/grupo/index.html
@@ -33,6 +33,10 @@
       background: none !important;
       padding: 0 !important;
     }
+
+    .smartplay-wrapper {
+    display: none!important;
+}
   </style>
   <link rel="stylesheet" id="wp-block-library-css" href="./index_files/style.min.css" media="all">
   <link rel="stylesheet" id="safe-svg-block-frontend-css" href="./index_files/safe-svg-block-frontend.css" media="all">
