--- a/grupo/index.html
+++ b/grupo/index.html
@@ -1495,7 +1495,7 @@
                 <div class="story-container">
                   
 
-                  <iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/4a8d3a7d-202d-414b-956a-2f4d58344de1/players/6531c8161f32140009f6def7/embed.html" id="ifr_6531c8161f32140009f6def7" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe>
+                  <iframe frameborder="0" allowfullscreen src="https://scripts.converteai.net/4a8d3a7d-202d-414b-956a-2f4d58344de1/players/6531c8161f32140009f6def7/embed.html?autoplay=1&loop=1" id="ifr_6531c8161f32140009f6def7" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe>
 
                   <style>
 
