--- a/grupo/index.html
+++ b/grupo/index.html
@@ -1495,7 +1495,7 @@
                 <div class="story-container">
                   
 
-                  <div style="padding:56.25% 0 0 0;"><iframe src="https://player.vimeo.com/video/876206665?h=a121e2868d&autoplay=1&loop=1&title=0&byline=0&controls=0&muted=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+                  <div style="padding:56.25% 0 0 0;"><iframe src="https://player.vimeo.com/video/876206665?h=a121e2868d&autoplay=1&loop=1&title=0&byline=0&controls=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
                   <style>
 
