--- a/grupo/index.html
+++ b/grupo/index.html
@@ -1495,7 +1495,7 @@
                 <div class="story-container">
                   
 
-                  <iframe src="https://player.vimeo.com/video/876206665?h=a121e2868d&autoplay=1&loop=1&title=0&byline=0&controls=0&muted=1" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                  <iframe src="https://player.vimeo.com/video/876206665?h=a121e2868d&autoplay=1&loop=1&title=0&byline=0&controls=0&muted=false" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                   <script src="https://player.vimeo.com/api/player.js"></script>
 
                   <style>
