--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 <body>
     <div class="container">
+        <img src="https://i.ibb.co/fD3xGqq/check-icone-1-scaled.png" alt="check-icone-1-scaled" border="0">
         <h1>Seja bem-vindo à nossa oferta especial!</h1>
         <p>Descubra como você pode se beneficiar do nosso produto incrível.</p>
         <a href="seu-link-de-destino" class="botao-continuar">Continuar</a>
