--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 <body>
     <div class="container">
         <img src="https://i.ibb.co/fD3xGqq/check-icone-1-scaled.png" alt="check-icone-1-scaled" border="0">
-        <h1>Seja bem-vindo à nossa oferta especial!</h1>
-        <p>Descubra como você pode se beneficiar do nosso produto incrível.</p>
+        <h1>Tudo certo!</h1>
+        <p>Veja o vídeo curto clicando em continuar e descubra como ter acesso rapidamente ao grupo para começar a ter resultados.</p>
         <a href="seu-link-de-destino" class="botao-continuar">Continuar</a>
     </div>
 </body>
