--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             align-items: center;
             height: 100vh;
             margin: 0;
+            font-family: 'Montserrat', sans-serif;
         }
         .container {
             text-align: center;
@@ -23,7 +24,12 @@
             border-radius: 5px;
             font-size: 18px;
             cursor: pointer;
+            text-decoration: none;
         }
+
+        p {
+    padding: 20px;
+}
     </style>
 </head>
 <body>
@@ -31,7 +37,7 @@
         <img src="https://i.ibb.co/fD3xGqq/check-icone-1-scaled.png" alt="check-icone-1-scaled" border="0">
         <h1>Tudo certo!</h1>
         <p>Veja o vídeo curto clicando em continuar e descubra como ter acesso rapidamente ao grupo para começar a ter resultados.</p>
-        <a href="seu-link-de-destino" class="botao-continuar">Continuar</a>
+        <a href="https://lucrandoaovivo.online/grupo/" class="botao-continuar">Continuar</a>
     </div>
 </body>
 </html>
