--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             text-align: center;
         }
         .botao-continuar {
-            background-color: green;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            text-decoration: none;
+            background-color: #4bae4f;
+    color: white;
+    padding: 15px 50px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    text-decoration: none;
         }
 
         p {
@@ -37,7 +37,7 @@
         <img src="https://i.ibb.co/fD3xGqq/check-icone-1-scaled.png" alt="check-icone-1-scaled" border="0">
         <h1>Tudo certo!</h1>
         <p>Veja o vídeo curto clicando em continuar e descubra como ter acesso rapidamente ao grupo para começar a ter resultados.</p>
-        <a href="https://lucrandoaovivo.online/grupo/" class="botao-continuar">Continuar</a>
+        <a href="https://lucrandoaovivo.online/grupo/" class="botao-continuar">Continuar...</a>
     </div>
 </body>
 </html>
