--- a/video/index.html
+++ b/video/index.html
@@ -12,7 +12,7 @@
     background-position: center;
     background-attachment: fixed;
     font-family: 'Montserrat', sans-serif;
-    background-image: linear-gradient(rgb(209 1 1 / 78%), rgb(0 0 0)), url(/banner.png);
+    background-image: linear-gradient(rgb(209 1 1 / 78%), rgb(0 0 0)), url(./banner.png);
     background-position: right;
     background-repeat: no-repeat;
     background-size: cover;
