--- a/video/index.html
+++ b/video/index.html
@@ -46,9 +46,9 @@
     overflow: hidden;
     width: 300px;
     margin: 0 auto;
-    -webkit-box-shadow: 0px 0px 22px 0px rgba(255,255,255,1);
-    -moz-box-shadow: 0px 0px 22px 0px rgba(255,255,255,1);
-    box-shadow: 0px 0px 22px 0px rgba(255,255,255,1);
+    -webkit-box-shadow: 0px 0px 22px 0px rgb(0 0 0);
+    -moz-box-shadow: 0px 0px 22px 0px rgb(0 0 0);
+    box-shadow: 0px 0px 22px 0px rgb(0 0 0);
     border-radius: 10px 10px 10px 10px;
     -moz-border-radius: 10px 10px 10px 10px;
     -webkit-border-radius: 10px 10px 10px 10px;
