--- a/video/index.html
+++ b/video/index.html
@@ -153,7 +153,7 @@
             fbq('track', 'Purchase');
         }
 
-      var buttons = document.getElementsByClassName('smartplayer-call-action--link');
+      var buttons = document.getElementsByClassName('botao-img');
       if (buttons.length > 0) {
       buttons[0].addEventListener('click', goCheckout);
       }
